--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </a>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#">Estudos</a></li>
+                    <li><a href="./pages/estudos.html">Estudos</a></li>
                     <li><a href="./pages/filmes.html">Filmes</a></li>
-                    <li><a href="#">Sobre nós</a></li>
+                    <li><a href="./index.html">Sobre nós</a></li>
                 </ul>
             </nav>
         </div>
@@ -34,7 +34,7 @@
                 <div class="hero-text">
                     <h1>Conhecimento que <span class="text-green">germina</span></h1>
                     <h2>consciência e <span class="text-green">cultiva mudanças</span></h2>
-                    <a href="#" class="btn btn-secondary">Começar</a>
+                    <a href="./pages/estudos.html" class="btn btn-secondary">Começar</a>
                 </div>
                 <div class="hero-image">
                     <img src="./imgs/home/img1.png" alt="Ilustração de pessoas cuidando do planeta Terra">
@@ -75,7 +75,7 @@
                 <div class="ecology-text">
                     <h3>O que é Ecologia?</h3>
                     <p>Ecologia é o estudo científico das interações dos organismos entre si e com o seu ambiente. Ela busca entender como os seres vivos afetam e são afetados pela natureza.</p>
-                    <a href="#" class="btn btn-secondary">Saiba mais</a>
+                    <a href="./pages/estudos.html" class="btn btn-secondary">Saiba mais</a>
                 </div>
             </div>
         </section>
@@ -201,7 +201,7 @@
     </main>
     
     <div class="feedback-float">
-        <a href="#">
+        <a href="./pages/feedback.html">
             <img src="https://img.icons8.com/ios-filled/50/ffffff/question-mark.png" alt="Ícone de ajuda">
         </a>
         <span>Feedback</span>
@@ -218,7 +218,7 @@
             <div class="footer-col">
                 <h4>Comunidade</h4>
                 <ul>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="./filmes.html">Blog</a></li>
                     <li><a href="#">Comunidades</a></li>
                     <li><a href="#">Ideias</a></li>
                 </ul>
@@ -226,9 +226,9 @@
             <div class="footer-col">
                 <h4>Suporte</h4>
                 <ul>
-                    <li><a href="#">Ajuda</a></li>
-                    <li><a href="#">Fale conosco</a></li>
-                    <li><a href="#">Status</a></li>
+                    <li><a href="./faq.html">Ajuda</a></li>
+                    <li><a href="./faq.html">Fale conosco</a></li>
+                    <li><a href="./feedback.html">Status</a></li>
                 </ul>
             </div>
             <div class="footer-col">
