--- a/pages/energias.html
+++ b/pages/energias.html
@@ -20,9 +20,9 @@
             </a>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#">Causas</a></li>
-                    <li><a href="#">Parceiros</a></li>
-                    <li><a href="../index.html">Sobre nós</a></li>
+                    <li><a href=".estudos.html">Estudos</a></li>
+                    <li><a href=".filmes.html">Filmes</a></li>
+                    <li><a href="../index.html">Home</a></li>
                 </ul>
             </nav>
         </div>
@@ -34,7 +34,7 @@
                 <div class="container hero-text-center">
                     <h1>ENERGIAS RENOVÁVEIS</h1>
                     <p>Fontes de energia renováveis são obtidas de recursos naturais como sol, ventos e água, que se repõem muito mais rápido do que os recursos não renováveis. Explore o impacto ambiental que as fontes trazem.</p>
-                    <a href="#" class="btn btn-secondary">Saiba Mais</a>
+                    <a href="./estudos.html" class="btn btn-secondary">Saiba Mais</a>
                 </div>
             </div>
         </section>
@@ -109,31 +109,31 @@
             <div class="container">
                 <div class="section-title">
                     <h3>Conteúdos</h3>
-                    <p>Disponibilizamos diversos temas para você aprender mais sobre a Ecologia.</p>
+                    <p>Disponibilizamos diversos temas para você mergulhar de cabeça em nosso universo.</p>
                 </div>
                 <div class="content-grid">
                     <div class="content-card" style="background-image: url('../imgs/home/industria.png');">
                         <div class="card-overlay">
                             <h4>Mudanças Climáticas</h4>
-                            <a href="../pages/mudancas-climaticas.html" class="btn btn-tertiary">Acessar</a>
+                            <a href="./mudancas-climaticas.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                     <div class="content-card" style="background-image: url('../imgs/home/lixo.png');">
                          <div class="card-overlay">
                             <h4>Reciclagem</h4>
-                            <a href="#" class="btn btn-tertiary">Acessar</a>
+                            <a href="./reciclagem.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                     <div class="content-card" style="background-image: url('../imgs/home/energiaeolica.png');">
                          <div class="card-overlay">
                             <h4>Sustentabilidade</h4>
-                            <a href="#" class="btn btn-tertiary">Acessar</a>
+                            <a href="./energias.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                     <div class="content-card" style="background-image: url('../imgs/home/floresta.png');">
                          <div class="card-overlay">
                             <h4>Ecossistema</h4>
-                            <a href="" class="btn btn-tertiary">Acessar</a>
+                            <a href="./ecossistema.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                 </div>
