--- a/pages/estudos.html
+++ b/pages/estudos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoSeed - Estudos</title>
 
-    <link rel="icon" href="../imgs/favicon.png" type="image/png">
+    <link rel="icon" href="../imgs/home/logoedu.png" type="image/png">
     
     <link rel="stylesheet" href="styleestudos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,18 +16,17 @@
 
     <header class="header header-transparent">
         <div class="container">
-            <a href="#" class="logo">
-                <img src="https://img.icons8.com/ios-filled/50/ffffff/leaf.png" alt="Folha Branca" class="logo-icon">
+            <a href="../index.html" class="logo">
+                <img src="../imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
                 <span>EcoSeed</span>
             </a>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Parceiros</a></li>
-                    <li><a href="#">Sobre nós</a></li>
+                    <li><a href="./estudos.html">Estudos</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../index.html">Sobre nós</a></li>
                 </ul>
             </nav>
-            <a href="#" class="btn btn-primary">Registre-se aqui</a>
         </div>
     </header>
 
@@ -47,39 +46,39 @@
 
                 <div class="study-grid">
                     <div class="mindmap-card">
-                        <img src="https://i.imgur.com/gKj3e5s.png" alt="Mapa Mental sobre Energia Eólica">
+                        <img src="../imgs/estudos/img1.png" alt="Mapa Mental sobre Energia Eólica">
                         <p class="card-caption">Energia Eólica</p>
                     </div>
                     <div class="video-card">
-                        <img src="https://i.imgur.com/v8t7s6F.png" alt="Thumbnail de vídeo sobre tipos de energia">
-                        <a href="#" class="btn-watch-video">Assistir ></a>
+                        <img src="../imgs/estudos/img2.png" alt="Thumbnail de vídeo sobre tipos de energia">
+                        <a href="https://youtu.be/rs-kBJKCABA?si=rudPJGJC1YIJeWY-" class="btn-watch-video">Assistir ></a>
                     </div>
 
                     <div class="mindmap-card">
-                        <img src="https://i.imgur.com/f9L8t7h.png" alt="Mapa Mental sobre Lixo">
+                        <img src="../imgs/estudos/img3.png" alt="Mapa Mental sobre Lixo">
                         <p class="card-caption">Lixo</p>
                     </div>
                     <div class="video-card">
-                        <img src="https://i.imgur.com/a1w2s3d.png" alt="Thumbnail de vídeo sobre Reciclagem">
-                        <a href="#" class="btn-watch-video">Assistir ></a>
+                        <img src="../imgs/estudos/img4.png" alt="Thumbnail de vídeo sobre Reciclagem">
+                        <a href="https://youtu.be/ITur0JNJZos?si=qrvrLMge1gby-csl" class="btn-watch-video">Assistir ></a>
                     </div>
                     
                     <div class="mindmap-card">
-                        <img src="https://i.imgur.com/c4b5f6e.png" alt="Mapa Mental sobre Ecologia">
+                        <img src="../imgs/estudos/img5.png" alt="Mapa Mental sobre Ecologia">
                         <p class="card-caption">Ecologia</p>
                     </div>
                     <div class="video-card">
-                        <img src="https://i.imgur.com/m7n6o5p.png" alt="Thumbnail de vídeo sobre Ecologia com um leão">
-                        <a href="#" class="btn-watch-video">Assistir ></a>
+                        <img src="../imgs/estudos/img6.png" alt="Thumbnail de vídeo sobre Ecologia com um leão">
+                        <a href="https://youtu.be/-Wspyt1skek?si=q4ZAvENoCTPxWzwT" class="btn-watch-video">Assistir ></a>
                     </div>
 
                     <div class="mindmap-card">
-                        <img src="https://i.imgur.com/d8p9q0r.png" alt="Mapa Mental sobre Clima">
+                        <img src="../imgs/estudos/img7.png" alt="Mapa Mental sobre Clima">
                         <p class="card-caption">Clima</p>
                     </div>
                     <div class="video-card">
-                        <img src="https://i.imgur.com/k0s1t2u.png" alt="Thumbnail de vídeo sobre Aquecimento Global">
-                        <a href="#" class="btn-watch-video">Assistir ></a>
+                        <img src="../imgs/estudos/img8.png" alt="Thumbnail de vídeo sobre Aquecimento Global">
+                        <a href="https://youtu.be/XSHXOEoB8jk?si=xi_LKpKYzZP4G1eg" class="btn-watch-video">Assistir ></a>
                     </div>
                 </div>
             </div>
@@ -87,7 +86,7 @@
 
         <section class="closing-illustration-section">
             <div class="container">
-                <img src="https://i.imgur.com/N1u2v3w.png" alt="Ilustração de uma pessoa sentada no chão estudando" class="closing-illustration">
+                <img src="../imgs/estudos/img9.png" alt="Ilustração de uma pessoa sentada no chão estudando" class="closing-illustration">
             </div>
         </section>
 
@@ -96,7 +95,45 @@
     <div class="feedback-float">
         </div>
 
-    <footer class="footer">
+        <footer class="footer">
+            <div class="container footer-layout">
+                <div class="footer-col">
+                    <a href="../index.html" class="logo footer-logo">
+                        <img src="../imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
+                        <span>EcoSeed</span>
+                    </a>
+                </div>
+                <div class="footer-col">
+                    <h4>Comunidade</h4>
+                    <ul>
+                        <li><a href="./filmes.html">Blog</a></li>
+                        <li><a href="#">Comunidades</a></li>
+                        <li><a href="#">Ideias</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Suporte</h4>
+                    <ul>
+                        <li><a href="./faq.html">Ajuda</a></li>
+                        <li><a href="./faq.html">Fale conosco</a></li>
+                        <li><a href="./feedback.html">Status</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Conecte-se conosco</h4>
+                    <div class="social-icons">
+                        <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/twitter--v1.png"
+                                alt="Twitter"></a>
+                        <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/facebook-new.png"
+                                alt="Facebook"></a>
+                        <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png"
+                                alt="Instagram"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 EcoSeed. Todos os direitos reservados.</p>
+            </div>
         </footer>
 
     <script src="script.js"></script>
