--- a/pages/faq.html
+++ b/pages/faq.html
@@ -22,9 +22,9 @@
             </a>
             <nav class="main-nav">
                 <ul>
+                    <li><a href=".estudos.html">Estudos</a></li>
+                    <li><a href=".filmes.html">Filmes</a></li>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="#">Parceiros</a></li>
-                    <li><a href="../index.html">Sobre nós</a></li>
                 </ul>
             </nav>
         </div>
@@ -109,7 +109,7 @@
             <div class="footer-col">
                 <h4>Comunidade</h4>
                 <ul>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="./filmes.html">Blog</a></li>
                     <li><a href="#">Comunidades</a></li>
                     <li><a href="#">Ideias</a></li>
                 </ul>
@@ -117,21 +117,14 @@
             <div class="footer-col">
                 <h4>Suporte</h4>
                 <ul>
-                    <li><a href="#">Ajuda</a></li>
-                    <li><a href="#">Fale conosco</a></li>
-                    <li><a href="#">Política de privacidade</a></li>
+                    <li><a href="./faq.html">Ajuda</a></li>
+                    <li><a href="./faq.html">Fale conosco</a></li>
+                    <li><a href="./feedback.html">Status</a></li>
                 </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Mantenha-se atualizado</h4>
-                <form class="newsletter-form">
-                    <input type="email" placeholder="Seu email">
-                    <button type="submit">→</button>
-                </form>
             </div>
         </div>
     </footer>
 
-    <script src="faq.js"></script>
+    <script src="feedback.js"></script>
 </body>
 </html>
