--- a/pages/filmes.html
+++ b/pages/filmes.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" href="../imgs/home/logoedu.png" type="image/png">
     
-    <link rel="stylesheet" href="styleestudos.css">
+    <link rel="stylesheet" href="stylefilmes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Lora:ital@0;1&display=swap" rel="stylesheet">
@@ -17,17 +17,16 @@
     <header class="header header-transparent">
         <div class="container">
             <a href="../index.html" class="logo">
-                <img src="https://img.icons8.com/ios-filled/50/ffffff/leaf.png" alt="Folha Branca" class="logo-icon">
+                <img src="../imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
                 <span>EcoSeed</span>
             </a>
             <nav class="main-nav">
                 <ul>
+                    <li><a href=".estudos.html">Estudos</a></li>
+                    <li><a href=".filmes.html">Filmes</a></li>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="./filmes.html">Parceiros</a></li>
-                    <li><a href="../index.html">Sobre nós</a></li>
                 </ul>
             </nav>
-            <a href="#" class="btn btn-primary">Registre-se aqui</a>
         </div>
     </header>
 
@@ -46,19 +45,19 @@
                 <h2 class="category-title">Conservação e <span class="text-green">Natureza</span></h2>
                 <div class="movie-grid">
                     <div class="movie-card">
-                        <img src="https://i.imgur.com/L5zY19d.jpg" alt="Pôster do filme Em Busca dos Corais">
+                        <img src="../imgs/filmes/img1.png" alt="Pôster do filme Em Busca dos Corais">
                         <h4>Em Busca dos Corais</h4>
-                        <a href="#" class="btn-movie">Análise</a>
+                        <a href="https://www.netflix.com/br/title/80168188" class="btn-movie">Análise</a>
                     </div>
                     <div class="movie-card">
-                        <img src="https://i.imgur.com/nJgq78c.jpg" alt="Pôster do filme Cowspiracy">
+                        <img src="../imgs/filmes/img2.png" alt="Pôster do filme Cowspiracy">
                         <h4>Cowspiracy</h4>
-                        <a href="#" class="btn-movie">Resumo</a>
+                        <a href="https://www.netflix.com/br/title/80033772" class="btn-movie">Resumo</a>
                     </div>
                     <div class="movie-card">
-                        <img src="https://i.imgur.com/1Y4h79e.jpg" alt="Pôster do filme O Dilema das Redes">
+                        <img src="../imgs/filmes/img3.png" alt="Pôster do filme O Dilema das Redes">
                         <h4>O Dilema das Redes</h4>
-                        <a href="#" class="btn-movie">Assistir</a>
+                        <a href="https://www.netflix.com/br/title/80200047" class="btn-movie">Assistir</a>
                     </div>
                 </div>
             </div>
@@ -69,19 +68,19 @@
                 <h2 class="category-title">Vida Animal e <span class="text-green">Ecossistemas</span></h2>
                 <div class="movie-grid">
                     <div class="movie-card">
-                        <img src="https://i.imgur.com/8m5s6Yt.jpg" alt="Pôster do filme O Segredo das Baleias">
+                        <img src="../imgs/filmes/img4.png" alt="Pôster do filme O Segredo das Baleias">
                         <h4>O Segredo das Baleias</h4>
-                        <a href="#" class="btn-movie">Análise</a>
+                        <a href="https://www.disneyplus.com/browse/entity-214a64b8-2468-4d71-a712-172b53e41e90" class="btn-movie">Análise</a>
                     </div>
                     <div class="movie-card">
-                        <img src="https://i.imgur.com/g8o4k3w.jpg" alt="Pôster do filme Wall-E">
+                        <img src="../imgs/filmes/img5.png" alt="Pôster do filme Wall-E">
                         <h4>Wall-E</h4>
-                        <a href="#" class="btn-movie">Análise</a>
+                        <a href="https://www.disneyplus.com/pt-br/browse/entity-280395a4-d5ef-4dd0-bd09-d91c31593d3d" class="btn-movie">Análise</a>
                     </div>
                     <div class="movie-card">
-                        <img src="https://i.imgur.com/u5u7j2Y.jpg" alt="Pôster do filme Uma Vida Extraordinária">
+                        <img src="../imgs/filmes/img6.png" alt="Pôster do filme Uma Vida Extraordinária">
                         <h4>Uma Vida Extraordinária</h4>
-                        <a href="#" class="btn-movie">Análise</a>
+                        <a href="https://www.netflix.com/br/title/70129386" class="btn-movie">Análise</a>
                     </div>
                 </div>
             </div>
@@ -92,19 +91,19 @@
                 <h2 class="category-title">Futuro e <span class="text-green">Planeta</span></h2>
                 <div class="movie-grid">
                     <div class="movie-card">
-                        <img src="https://i.imgur.com/3qY8d5P.jpg" alt="Pôster do filme Oceanos de Plástico">
+                        <img src="../imgs/filmes/img7.png" alt="Pôster do filme Oceanos de Plástico">
                         <h4>Oceanos de Plástico</h4>
-                        <a href="#" class="btn-movie">Análise</a>
+                        <a href="disneyplus.com/en-tr/browse/entity-c472832f-a4e8-4bee-8232-404e803b183f" class="btn-movie">Análise</a>
                     </div>
                     <div class="movie-card">
-                        <img src="https://i.imgur.com/a9c3b8T.jpg" alt="Pôster do filme O Lorax">
+                        <img src="../imgs/filmes/img8.png" alt="Pôster do filme O Lorax">
                         <h4>O Lorax</h4>
-                        <a href="#" class="btn-movie">Análise</a>
+                        <a href="https://www.netflix.com/br/title/70208102" class="btn-movie">Análise</a>
                     </div>
                     <div class="movie-card">
-                        <img src="https://i.imgur.com/c5j6x2G.jpg" alt="Pôster do filme Brave Blue World">
+                        <img src="../imgs/filmes/img9.png" alt="Pôster do filme Brave Blue World">
                         <h4>Brave Blue World</h4>
-                        <a href="#" class="btn-movie">Análise</a>
+                        <a href="https://www.disneyplus.com/pt-br/browse/entity-c255a738-ee7f-4569-ba89-acacb6e5cefb" class="btn-movie">Análise</a>
                     </div>
                 </div>
             </div>
@@ -112,7 +111,7 @@
 
         <section class="closing-illustration-section">
             <div class="container">
-                <img src="https://i.imgur.com/j4l8y5N.png" alt="Ilustração de pessoas assistindo a um filme no cinema" class="closing-illustration">
+                <img src="../imgs/filmes/img10.png" alt="Ilustração de pessoas assistindo a um filme no cinema" class="closing-illustration">
             </div>
         </section>
 
@@ -121,7 +120,45 @@
     <div class="feedback-float">
         </div>
 
-    <footer class="footer">
+        <footer class="footer">
+            <div class="container footer-layout">
+                <div class="footer-col">
+                    <a href="../index.html" class="logo footer-logo">
+                        <img src="../imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
+                        <span>EcoSeed</span>
+                    </a>
+                </div>
+                <div class="footer-col">
+                    <h4>Comunidade</h4>
+                    <ul>
+                        <li><a href="./filmes.html">Blog</a></li>
+                        <li><a href="#">Comunidades</a></li>
+                        <li><a href="#">Ideias</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Suporte</h4>
+                    <ul>
+                        <li><a href="./faq.html">Ajuda</a></li>
+                        <li><a href="./faq.html">Fale conosco</a></li>
+                        <li><a href="./feedback.html">Status</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Conecte-se conosco</h4>
+                    <div class="social-icons">
+                        <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/twitter--v1.png"
+                                alt="Twitter"></a>
+                        <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/facebook-new.png"
+                                alt="Facebook"></a>
+                        <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png"
+                                alt="Instagram"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 EcoSeed. Todos os direitos reservados.</p>
+            </div>
         </footer>
 
     <script src="script.js"></script>
