--- a/pages/mudancas-climaticas.html
+++ b/pages/mudancas-climaticas.html
@@ -20,9 +20,9 @@
             </a>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#">Causas</a></li>
-                    <li><a href="#">Parceiros</a></li>
-                    <li><a href="../index.html">Sobre nós</a></li>
+                    <li><a href=".estudos.html">Estudos</a></li>
+                    <li><a href=".filmes.html">Filmes</a></li>
+                    <li><a href="../index.html">Home</a></li>
                 </ul>
             </nav>
         </div>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="impacts-grid">
                     <div class="impact-item item-1">
-                        <img src="https://i.imgur.com/bQ4o0XF.png" alt="Ilustração do Planeta Terra com poluição e natureza">
+                        <img src="../imgs/mudancasclimaticas/img1.png" alt="Ilustração do Planeta Terra com poluição e natureza">
                     </div>
                     <div class="impact-item item-2">
                         <div class="text-box-gray">
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div class="impact-item item-4">
-                        <img src="https://i.imgur.com/k2H4W9X.png" alt="Ilustração de pessoas plantando árvores">
+                        <img src="../imgs/mudancasclimaticas/img2.png" alt="Ilustração de pessoas plantando árvores">
                     </div>
                 </div>
             </div>
@@ -108,12 +108,12 @@
         <section class="comparison-section">
             <div class="container comparison-grid">
                 <div class="comparison-card">
-                    <img src="https://i.imgur.com/sTj2lOa.png" alt="Foto antiga de cidade em preto e branco">
+                    <img src="../imgs/mudancasclimaticas/image 11.png" alt="Foto antiga de cidade em preto e branco">
                     <h4>Antes</h4>
                     <p>Singapura sofria com a poluição de rios e saneamento precário, desafios que pareciam complexos e que foram vencidos com planejamento e visão de futuro.</p>
                 </div>
                 <div class="comparison-card">
-                    <img src="https://i.imgur.com/2Y5R6Yd.png" alt="Foto moderna de Singapura">
+                    <img src="../imgs/mudancasclimaticas/image 10.png" alt="Foto moderna de Singapura">
                     <h4>Depois</h4>
                     <p>Hoje é uma cidade global, moderna e sustentável, com rios limpos, transporte público eficiente e edifícios verdes, provando o poder da transformação urbana.</p>
                 </div>
@@ -125,20 +125,20 @@
                 <div class="section-title">
                     <h3>Curiosidades sobre um animal em extinção</h3>
                 </div>
-                <img src="https://i.imgur.com/7gK7S3b.jpg" alt="Baleia jubarte saltando da água" class="main-animal-image">
+                <img src="../imgs/mudancasclimaticas/Rectangle 3.png" alt="Baleia jubarte saltando da água" class="main-animal-image">
                 <div class="animal-info-grid">
                     <div class="animal-info-card">
-                        <img src="https://i.imgur.com/icon1.png" alt="Ícone aparência">
+                        <img src="../imgs/mudancasclimaticas/icon1.png" alt="Ícone aparência">
                         <h4>Aparência Única</h4>
                         <p>A jubarte é um mamífero marinho de grande porte, com corpo robusto e nadadeiras peitorais longas, que podem chegar a um terço do seu comprimento total.</p>
                     </div>
                     <div class="animal-info-card">
-                        <img src="https://i.imgur.com/icon2.png" alt="Ícone história">
+                        <img src="../imgs/mudancasclimaticas/icon2.png" alt="Ícone história">
                         <h4>História</h4>
                         <p>A caça comercial no século XX levou a espécie à beira da extinção. Graças a esforços de conservação e leis de proteção, a população está em lenta recuperação.</p>
                     </div>
                     <div class="animal-info-card">
-                        <img src="https://i.imgur.com/icon3.png" alt="Ícone migração">
+                        <img src="../imgs/mudancasclimaticas/icon3.png" alt="Ícone migração">
                         <h4>Migrações</h4>
                         <p>A baleia-franca-austral realiza uma das mais longas migrações entre os mamíferos, viajando desde as águas frias da Antártida até o litoral brasileiro para se reproduzir.</p>
                     </div>
@@ -153,28 +153,28 @@
                     <p>Disponibilizamos diversos temas para você aprender mais sobre a Ecologia.</p>
                 </div>
                 <div class="content-grid">
-                    <div class="content-card" style="background-image: url('./imgs/home/industria.png');">
+                    <div class="content-card" style="background-image: url('../imgs/home/industria.png');">
                         <div class="card-overlay">
                             <h4>Mudanças Climáticas</h4>
-                            <a href="./pages/mudancas-climaticas.html" class="btn btn-tertiary">Acessar</a>
+                            <a href="./mudancas-climaticas.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
-                    <div class="content-card" style="background-image: url('./imgs/home/lixo.png');">
+                    <div class="content-card" style="background-image: url('../imgs/home/lixo.png');">
                          <div class="card-overlay">
                             <h4>Reciclagem</h4>
-                            <a href="./pages/reciclagem.html" class="btn btn-tertiary">Acessar</a>
+                            <a href="./reciclagem.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
-                    <div class="content-card" style="background-image: url('./imgs/home/energiaeolica.png');">
+                    <div class="content-card" style="background-image: url('../imgs/home/energiaeolica.png');">
                          <div class="card-overlay">
                             <h4>Sustentabilidade</h4>
-                            <a href="./pages/energias.html" class="btn btn-tertiary">Acessar</a>
+                            <a href="./energias.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
-                    <div class="content-card" style="background-image: url('./imgs/home/floresta.png');">
+                    <div class="content-card" style="background-image: url('../imgs/home/floresta.png');">
                          <div class="card-overlay">
                             <h4>Ecossistema</h4>
-                            <a href="./pages/ecossistema.html" class="btn btn-tertiary">Acessar</a>
+                            <a href="./ecossistema.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                 </div>
