--- a/pages/reciclagem.html
+++ b/pages/reciclagem.html
@@ -15,15 +15,15 @@
 
     <header class="header header-transparent">
         <div class="container">
-            <a href="../imgs/home/logoedu.png" class="logo">
-                <img src="https://img.icons8.com/ios-filled/50/ffffff/leaf.png" alt="Folha Branca" class="logo-icon">
+            <a href="../index.html" class="logo">
+                <img src="../imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
                 <span>EcoSeed</span>
             </a>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#">Causas</a></li>
-                    <li><a href="#">Parceiros</a></li>
-                    <li><a href="#">Sobre nós</a></li>
+                    <li><a href="./estudos.html">Estudos</a></li>
+                    <li><a href="./filmes.html">Filmes</a></li>
+                    <li><a href="../index.html">Home</a></li>
                 </ul>
             </nav>
         </div>
@@ -42,7 +42,7 @@
         <section class="what-is-section">
             <div class="container text-center">
                 <h3 class="underlined-title">O QUE É RECICLAGEM?</h3>
-                <img src="https://i.imgur.com/qLwG3Tj.png" alt="Quatro lixeiras de coleta seletiva" class="recycling-bins-image">
+                <img src="../imgs/reciclagem/image 23.png" alt="Quatro lixeiras de coleta seletiva" class="recycling-bins-image">
                 <p class="section-paragraph">
                     Reciclagem é o processo de transformar materiais que seriam descartados em novos produtos de valor comercial, como papel, plástico e metal. Reciclar é uma forma de reaproveitar, economizar e preservar o planeta.
                 </p>
@@ -52,7 +52,7 @@
         <section class="quote-section-alt">
             <div class="container quote-layout-alt">
                 <div class="quote-image-alt">
-                    <img src="https://i.imgur.com/uG5B8Gq.png" alt="Retrato de Albert Schweitzer">
+                    <img src="../imgs/reciclagem/image 22.png" alt="Retrato de Albert Schweitzer">
                 </div>
                 <div class="quote-text-alt">
                     <blockquote>
@@ -70,17 +70,17 @@
                 </div>
                 <div class="importance-grid">
                     <div class="importance-card">
-                        <img src="https://i.imgur.com/wVp3j7g.jpg" alt="Área árida">
+                        <img src="../imgs/reciclagem/Ellipse 15.png" alt="Área árida">
                         <h4>Reciclagem e Pequena Escala</h4>
                         <p>A reciclagem é fundamental para reduzir a quantidade de resíduos em aterros sanitários e poupar recursos naturais.</p>
                     </div>
                     <div class="importance-card">
-                        <img src="https://i.imgur.com/xO8v4hB.jpg" alt="Ambiente urbano">
+                        <img src="../imgs/reciclagem/Ellipse 16.png" alt="Ambiente urbano">
                         <h4>Benefícios para a Atmosfera</h4>
                         <p>Reciclar materiais consome menos energia do que produzir do zero, o que diminui a emissão de gases de efeito estufa.</p>
                     </div>
                     <div class="importance-card">
-                        <img src="https://i.imgur.com/5D6F9fM.jpg" alt="Onda de plástico">
+                        <img src="../imgs/reciclagem/Ellipse 17.png" alt="Onda de plástico">
                         <h4>Modernização da Mentalidade de Consumo</h4>
                         <p>É essencial repensar o consumo e adotar uma postura mais consciente sobre o descarte de plásticos.</p>
                     </div>
@@ -91,7 +91,7 @@
         <section class="brazil-data-section">
             <div class="container brazil-data-layout">
                 <div class="brazil-map">
-                    <img src="https://i.imgur.com/E5d3sL3.png" alt="Mapa do Brasil com folhas verdes">
+                    <img src="../imgs/reciclagem/pngwing.com 1.png" alt="Mapa do Brasil com folhas verdes">
                 </div>
                 <div class="brazil-text">
                     <p>Entre 2019 e 2021, a reciclagem de latas proporcionou redução de 90% no consumo de energia, além de uma queda de 70% nas emissões de gases de efeito estufa.</p>
@@ -106,28 +106,28 @@
                     <p>Disponíveis em nosso site para você aprender mais sobre Ecologia.</p>
                 </div>
                 <div class="content-grid">
-                    <div class="content-card" style="background-image: url('./imgs/home/industria.png');">
+                    <div class="content-card" style="background-image: url('../imgs/home/industria.png');">
                         <div class="card-overlay">
                             <h4>Mudanças Climáticas</h4>
-                            <a href="./pages/mudancas-climaticas.html" class="btn btn-tertiary">Acessar</a>
+                            <a href="./mudancas-climaticas.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
-                    <div class="content-card" style="background-image: url('./imgs/home/lixo.png');">
+                    <div class="content-card" style="background-image: url('../imgs/home/lixo.png');">
                          <div class="card-overlay">
                             <h4>Reciclagem</h4>
-                            <a href="./pages/reciclagem.html" class="btn btn-tertiary">Acessar</a>
+                            <a href="./reciclagem.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
-                    <div class="content-card" style="background-image: url('./imgs/home/energiaeolica.png');">
+                    <div class="content-card" style="background-image: url('../imgs/home/energiaeolica.png');">
                          <div class="card-overlay">
                             <h4>Sustentabilidade</h4>
-                            <a href="./pages/energias.html" class="btn btn-tertiary">Acessar</a>
+                            <a href="./energias.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
-                    <div class="content-card" style="background-image: url('./imgs/home/floresta.png');">
+                    <div class="content-card" style="background-image: url('../imgs/home/floresta.png');">
                          <div class="card-overlay">
                             <h4>Ecossistema</h4>
-                            <a href="./pages/ecossistema.html" class="btn btn-tertiary">Acessar</a>
+                            <a href="./ecossistema.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                 </div>
@@ -143,8 +143,43 @@
     </div>
 
     <footer class="footer">
-        </footer>
+        <div class="container footer-layout">
+            <div class="footer-col">
+                <a href="#" class="logo footer-logo">
+                    <img src="../imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
+                    <span>EcoSeed</span>
+                </a>
+            </div>
+            <div class="footer-col">
+                <h4>Comunidade</h4>
+                <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Comunidades</a></li>
+                    <li><a href="#">Ideias</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Suporte</h4>
+                <ul>
+                    <li><a href="#">Ajuda</a></li>
+                    <li><a href="#">Fale conosco</a></li>
+                    <li><a href="#">Status</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Conecte-se conosco</h4>
+                <div class="social-icons">
+                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/twitter--v1.png" alt="Twitter"></a>
+                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/facebook-new.png" alt="Facebook"></a>
+                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png" alt="Instagram"></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 EcoSeed. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
